logs/noolite-f.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/NooLite_F'...
Listing './lib/python3.5/site-packages/NooLite_F/MTRF64'...
Compiling './lib/python3.5/site-packages/NooLite_F/MTRF64/MTRF64Controller.py'...
***   File "./lib/python3.5/site-packages/NooLite_F/MTRF64/MTRF64Controller.py", line 30
    _listener_map: {int: [RemoteControllerListener]} = {}
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/NooLite_F/MTRF64/MTRF64USBAdapter.py'...
***   File "./lib/python3.5/site-packages/NooLite_F/MTRF64/MTRF64USBAdapter.py", line 75
    mode: Mode = Mode.TX
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/NooLite_F/NooLiteFController.py'...
***   File "./lib/python3.5/site-packages/NooLite_F/NooLiteFController.py", line 33
    state: ModuleState = None
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NooLite_F-0.0.15.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
